@@ -6,4 +6,4 @@ src/db/configtable.py
 src/db/fieldstable.py
 src/db/versionstable.py
 src/gui/widgets/genericlistview.py
-
+src/lib/migrate_to_gconf.py
