@@ -1,3 +1,8 @@
+2008-08-23  Og Maciel <ogmaciel@gnome.org>
+
+    * POTFILES.in: Added data/billreminder.schemas.in.
+    * POTFILES.skip: Added src/lib/migrate_to_gconf.py.
+
 2008-08-16  Robert-André Mauchin <zebob.m@pengzone.org>
     * fr.po: Updated French translation
 
